[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "piping_bag"
version = "0.2.4"
dependencies = [
    "pydantic==2.11.3",
    "asyncpg==0.30.0",
    "aiosqlite==0.21.0",
    "psycopg-binary==3.2.6"
]

[tool.setuptools.packages.find]
where = ["."]
