[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "piping_bag"
version = "0.3.0"
dependencies = [
    "pydantic==2.11.5",
    "asyncpg==0.30.0",
    "aiosqlite==0.21.0",
    "psycopg-binary==3.2.9",
]

[tool.setuptools.packages.find]
where = ["."]
